--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,22 @@
 
 </head>
 <body>
+    <header>
+        <h2>Hudget</h2>
+        <nav>
+            <a href="#">Login</a>
+        </nav>
+    </header>
 
+    <main>
+        <div id="view"></div>
+
+
+        <template id="template-homepage">
+
+        </template>
+
+        
+    </main>
 </body>
 </html>
