--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -10,15 +10,18 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" defer></script>
+    <script src="/JavaScript/Router.js" defer></script>
+    <script src="/JavaScript/app.js" defer></script>
 
+    
 
 </head>
 <body>
     <header>
         <h2>Hudget</h2>
         <nav>
-            <a href="#">Login</a>
+            <a href="#/">Login</a>
         </nav>
     </header>
 
@@ -26,8 +29,8 @@
         <div id="view"></div>
 
 
-        <template id="template-homepage">
-
+        <template id="template-home">
+            Hello World
         </template>
 
         
