--- a/Index.html
+++ b/Index.html
@@ -58,11 +58,21 @@
           <h2>hello test</h2>
         </template>
 
+        <div class="row">
           <form>
             <label for="monthly_budget">Current budget:</label>
             <input name="monthly_budget" type="number" value="0">
             <label for="monthly_budget">,-</label>
           </form>
+
+          <div class="col-12">
+            <div class="">
+              <p>Octorber:</p>
+            </div>
+            <p>Week 1</p>
+            <p>500,-</p>
+          </div>
+        </div>
 
           
     </main>
