--- a/Index.html
+++ b/Index.html
@@ -61,66 +61,72 @@
 
 
         <template id="template-weekpage">
-
           <section class="container">
-            <div class="row justify-content-center align-items-center">
-              <form>
-                <label for="monthly_budget">Current budget:</label>
-                <input class="col-4" name="monthly_budget" type="number" value="0">
-                <label for="monthly_budget">,-</label>
-              </form>
-            </div>
-
-              <div class="row justify-content-center align-items-center">
-                  <div id="week_monthly_budget">
-                    <div class="row">
-                      <p class="col-6">Octorber:</p>
-                      <p class="col-6">Week 1</p>
+            <div class="row justify-content-center align-items-center text-center">
+              <div class="whiteBackgroundColor">
+                <div class="container">
+                  <form class="row" method="post">
+                    <div class="col-12">
+                      <label for="monthly_budget">Current budget:</label>
+                      <input class="col-4" name="monthly_budget" type="number" value="0">
+                      <label for="monthly_budget">,-</label>
                     </div>
-                  </div>
-              </div>
+                  </form>
+                </div>
 
-              <div class="row justify-content-center align-items-center">
-                <div id="monthly_budget" class="col-1 rounded-circle">
-                  <p>500,-</p>
+                <div class="container">
+                  <div class="row justify-content-center align-items-center text-center">
+                    <div class="row mt-2" id="week_monthly_budget">
+                      <p class="col">Octorber:</p>
+                      <p class="col">Week 1</p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="row mt-2 justify-content-center align-items-center text-center">
+                  <div id="monthly_budget" class="col-2 rounded-circle">
+                    <p>500,-</p>
+                  </div>
                 </div>
               </div>
+            </div>
+              
           </section>
 
           <section class="container mt-5">
-              <div class="row justify-content-center align-items-center text-center ">
+              <div class="row justify-content-center align-items-center text-center">
                 <div class="col-6">
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 whiteBackgroundColor" >
                       <i class="fa-solid fa-calendar-plus col-12"></i>
                       <p class="col-12">Monday</p>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 whiteBackgroundColor">
                       <i class="fa-solid fa-calendar-plus col-12"></i>
                       <p class="col-12">Tuesday</p>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 whiteBackgroundColor">
                       <i class="fa-solid fa-calendar-plus col-12"></i>
                       <p class="col-12">Wendsday</p>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 whiteBackgroundColor">
                       <i class="fa-solid fa-calendar-plus col-12"></i>
                       <p class="col-12">Thursday</p>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 whiteBackgroundColor">
                       <i class="fa-solid fa-calendar-plus col-12"></i>
                       <p class="col-12">Friday</p>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 whiteBackgroundColor">
                       <i class="fa-solid fa-calendar-plus col-12"></i>
                       <p class="col-12">Saturday</p>
                     </div>
                   </div>
-                  <div class="col-12">
+                  <div class="col-12 whiteBackgroundColor">
                     <i class="fa-solid fa-calendar-plus col-12"></i>
                     <p class="col-12">Sunday</p>
                   </div>
