--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@
             <div class="row justify-content-center align-items-center text-center">
               <div class="whiteBackgroundColor">
                 <div class="container">
-                  <form class="row" method="post">
+                  <form class="row mt-3 bottomBorder" method="post">
                     <div class="col-12">
                       <label for="monthly_budget">Current budget:</label>
                       <input class="col-4" name="monthly_budget" type="number" value="0">
@@ -97,38 +97,40 @@
               <div class="row justify-content-center align-items-center text-center">
                 <div class="col-6">
                   <div class="row">
-                    <div class="col-6 whiteBackgroundColor" >
-                      <i class="fa-solid fa-calendar-plus col-12"></i>
+                    <div class="col-5 whiteBackgroundColor" >
+                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder"></i>
                       <p class="col-12">Monday</p>
                     </div>
-                    <div class="col-6 whiteBackgroundColor">
-                      <i class="fa-solid fa-calendar-plus col-12"></i>
+                    <div class="col-5 offset-md-2 whiteBackgroundColor">
+                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder"></i>
                       <p class="col-12">Tuesday</p>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-6 whiteBackgroundColor">
-                      <i class="fa-solid fa-calendar-plus col-12"></i>
+                  <div class="row mt-1">
+                    <div class="col-5 whiteBackgroundColor">
+                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder"></i>
                       <p class="col-12">Wendsday</p>
                     </div>
-                    <div class="col-6 whiteBackgroundColor">
-                      <i class="fa-solid fa-calendar-plus col-12"></i>
+                    <div class="col-5 offset-md-2 whiteBackgroundColor">
+                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder"></i>
                       <p class="col-12">Thursday</p>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-6 whiteBackgroundColor">
-                      <i class="fa-solid fa-calendar-plus col-12"></i>
+                  <div class="row mt-1">
+                    <div class="col-5 whiteBackgroundColor">
+                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder"></i>
                       <p class="col-12">Friday</p>
                     </div>
-                    <div class="col-6 whiteBackgroundColor">
-                      <i class="fa-solid fa-calendar-plus col-12"></i>
+                    <div class="col-5 offset-md-2 whiteBackgroundColor">
+                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder"></i>
                       <p class="col-12">Saturday</p>
                     </div>
                   </div>
-                  <div class="col-12 whiteBackgroundColor">
-                    <i class="fa-solid fa-calendar-plus col-12"></i>
-                    <p class="col-12">Sunday</p>
+                  <div class="row mt-1">
+                    <div class="col-12 whiteBackgroundColor">
+                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder"></i>
+                      <p class="col-12">Sunday</p>
+                    </div>
                   </div>
                 </div>
               </div>
