--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
 
     <!--Font awesome-->
     <script src="https://kit.fontawesome.com/4ef292df47.js" crossorigin="anonymous"></script>
+
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="/CSS/Style.css">
     <script type="text/javascript" src="/JavaScript/Router.js" defer></script>
     <script type="text/javascript" src="/JavaScript/app.js" defer></script>
     <script type="text/javascript" src="/JavaScript/MonthlyScript.js" defer></script>
+    <script type="text/javascript" src="/JavaScript/MonthlyBudget.js" defer></script>
 
 </head>
 <body>
-  <header class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <header class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-light">
           <h2>Hudget</h2>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
@@ -54,8 +60,26 @@
         <template id="template-homepage">
           <div class="container">
             <div class="row" id="frontend-info">
-                <h1 class="col-12 text-center font-weight-bold ">Hudget</h1>
-                <p class="col-12 text-center">An web app that helps students with managing budget</p>
+                <h1 class="col-12 text-center font-weight-bold">Hudget</h1>
+                <div class="col mt-5 p-5 greyBackgroundColor">
+                  <h2 class="font-weight-bold">
+                    Food budget
+                    <i class="fa-solid fa-piggy-bank"></i>
+                  </h2>
+                  <p class="font-weight-bold mt-3">Do you have problem with keeping track your food budget?</p>
+                  <p>Hudget can help you with managning it!</p>
+                  <p>Enter how much you have each month and hudget will calculate how much you have for each week and weekdays.</p>
+                </div>
+                <div class="col mt-5 p-5 greyBackgroundColor">
+                  <h2 class="font-weight-bold">
+                    Find inspiration
+                    <i class="fa-solid fa-lightbulb"></i>
+                  </h2>
+                  <p class="font-weight-bold mt-3">Need to find inspiration for launch and dinner?</p>
+                  <p>With our amasing algorithm you can enter what food you already own and get some recipes</p>
+                  <p class="font-weight-bold">Have dietary requierment?</p>
+                  <p>The recipes will meet your choosen requirments</p>
+                </div>
             </div>
           </div>
         </template>
@@ -65,19 +89,27 @@
         <template id="template-weekpage">
           <section class="container">
             <div class="row justify-content-center align-items-center text-center">
-              <div class="whiteBackgroundColor">
+              <div class="greyBackgroundColor">
                 <div class="container">
-                  <form class="row mt-3 bottomBorder" method="post">
+                  <form id="monthlyBudgetForm" class="row mt-3 bottomBorder" method="post">
                     <div class="col-12">
                       <label for="monthly_budget">Current budget:</label>
-                      <input class="col-4" name="monthly_budget" type="number" value="0">
+                      <input id="monthlyMoney" class="col-4" name="monthly_budget" type="number" value="0">
                       <label for="monthly_budget">,-</label>
+                      <button id="submit" type="submit">Submit</button>
                     </div>
                   </form>
+
+                  <script>
+                    document.forms["monthlyBudgetForm"].addEventListener("submit", (event) => {
+                      event.preventDefault()
+                      monthlybudget.upload();
+                    })
+                  </script>
                 </div>
 
                 <div class="container">
-                  <div class="row justify-content-center align-items-center text-center">
+                  <div class="row justify-content-center text-center">
                     <div class="row mt-2" id="week_monthly_budget">
                       <p class="col">Octorber:</p>
                       <p class="col">Week 1</p>
@@ -85,9 +117,9 @@
                   </div>
                 </div>
 
-                <div class="row mt-2 justify-content-center align-items-center text-center">
-                  <div id="monthly_budget" class="col-2 rounded-circle">
-                    <p>500,-</p>
+                <div class="row mt-2 justify-content-center">
+                  <div id="monthly_budget" class="col-2 text-center p-1 rounded-circle">
+                    <p>500</p>
                   </div>
                 </div>
               </div>
@@ -99,35 +131,35 @@
               <div class="row justify-content-center align-items-center text-center">
                 <div class="col-12">
                   <div class="row">
-                    <div class="col whiteBackgroundColor mt-1">
+                    <div class="col greyBackgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Monday</p>
                     </div>
-                    <div class="col offset-md-1 whiteBackgroundColor mt-1">
+                    <div class="col offset-md-1 greyBackgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Tuesday</p>
                     </div>
-                    <div class="col offset-md-1 whiteBackgroundColor mt-1">
+                    <div class="col offset-md-1 greyBackgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Wendsday</p>
                     </div>
                   </div>
                   <div class="row mt-3">
-                    <div class="col whiteBackgroundColor mt-1">
+                    <div class="col greyBackgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Thursday</p>
                     </div>
-                    <div class="col offset-md-1 whiteBackgroundColor mt-1">
+                    <div class="col offset-md-1 greyBackgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Friday</p>
                     </div>
-                    <div class="col offset-md-1 whiteBackgroundColor mt-1">
+                    <div class="col offset-md-1 greyBackgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Saturday</p>
                     </div>
                   </div>
                   <div class="row mt-3">
-                    <div class="col-6 offset-md-3 whiteBackgroundColor mt-1">
+                    <div class="col-6 offset-md-3 greyBackgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Sunday</p>
                     </div>
@@ -181,7 +213,7 @@
     </template>
     </main>
     
-    <footer class="position-absolute container-fluid text-center">
+    <footer class="position-absolute container-fluid text-center pt-2">
       <div class="row">
           <p class="col"><i class="fas fa-home me-3 text-secondary"></i> Guldbergsgade 29N, 2200 København</p>
           <p class="col"><i class="fas fa-envelope me-3 text-secondary"></i>
