--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             <image class="col-1 mr-auto ml-auto"onclick="monthForwardsActivator()" id="MonthForwards" src="RightArrow.png" alt="RightArrow"></image>
           </div>
           
-          <div id="monthContent">
-          
+          <div id='monthContent'>
+            <!--Ugerne kommer i denne div-->
           </div>
         </div>
     </template>
