--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
           <div class="container">
             <div class="row" id="frontend-info">
                 <h1 class="col-12 text-center font-weight-bold">Hudget</h1>
-                <div class="col mt-5 p-5 greyBackgroundColor">
+                <div class="col mt-5 p-5 backgroundColor">
                   <h2 class="font-weight-bold">
                     Food budget
-                    <i class="fa-solid fa-piggy-bank"></i>
+                    <i class="fa-solid fa-piggy-bank pink"></i>
                   </h2>
                   <p class="font-weight-bold mt-3">Do you have problem with keeping track your food budget?</p>
                   <p>Hudget can help you with managning it!</p>
                   <p>Enter how much you have each month and hudget will calculate how much you have for each week and weekdays.</p>
                 </div>
-                <div class="col mt-5 p-5 greyBackgroundColor">
+                <div class="col mt-5 p-5 backgroundColor">
                   <h2 class="font-weight-bold">
                     Find inspiration
-                    <i class="fa-solid fa-lightbulb"></i>
+                    <i class="fa-solid fa-lightbulb yellow"></i>
                   </h2>
                   <p class="font-weight-bold mt-3">Need to find inspiration for launch and dinner?</p>
                   <p>With our amasing algorithm you can enter what food you already own and get some recipes</p>
@@ -88,25 +88,6 @@
         <!--Weekpage-->
         <template id="template-weekpage">
           <section class="container">
-            <div class="row justify-content-center align-items-center text-center">
-              <div class="greyBackgroundColor">
-                <div class="container">
-                  <form id="monthlyBudgetForm" class="row mt-3 bottomBorder" method="post">
-                    <div class="col-12">
-                      <label for="monthly_budget">Current budget:</label>
-                      <input id="monthlyMoney" class="col-4" name="monthly_budget" type="number" value="0">
-                      <label for="monthly_budget">,-</label>
-                      <button id="submit" type="submit">Submit</button>
-                    </div>
-                  </form>
-
-                  <script>
-                    document.forms["monthlyBudgetForm"].addEventListener("submit", (event) => {
-                      event.preventDefault()
-                      monthlybudget.upload();
-                    })
-                  </script>
-                </div>
 
                 <div class="container">
                   <div class="row justify-content-center text-center">
@@ -131,35 +112,35 @@
               <div class="row justify-content-center align-items-center text-center">
                 <div class="col-12">
                   <div class="row">
-                    <div class="col greyBackgroundColor mt-1">
+                    <div class="col backgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Monday</p>
                     </div>
-                    <div class="col offset-md-1 greyBackgroundColor mt-1">
+                    <div class="col offset-md-1 backgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Tuesday</p>
                     </div>
-                    <div class="col offset-md-1 greyBackgroundColor mt-1">
+                    <div class="col offset-md-1 backgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Wendsday</p>
                     </div>
                   </div>
                   <div class="row mt-3">
-                    <div class="col greyBackgroundColor mt-1">
+                    <div class="col backgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Thursday</p>
                     </div>
-                    <div class="col offset-md-1 greyBackgroundColor mt-1">
+                    <div class="col offset-md-1 backgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Friday</p>
                     </div>
-                    <div class="col offset-md-1 greyBackgroundColor mt-1">
+                    <div class="col offset-md-1 backgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Saturday</p>
                     </div>
                   </div>
                   <div class="row mt-3">
-                    <div class="col-6 offset-md-3 greyBackgroundColor mt-1">
+                    <div class="col-6 offset-md-3 backgroundColor mt-1">
                       <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
                       <p class="col-12">Sunday</p>
                     </div>
@@ -172,28 +153,49 @@
 
       <!--Login-->
       <template id="template-login">
-        <p>Login</p>
-        <form>
-          <label>Username</label>
-          <input type="text" name="usernane" placeholder="Enter username">
-          <label>Password</label>
-          <input type="text" name="password" placeholder="Enter password">
-          <input type="submit" name="submit" placeholder="Submit">
-        </form>
-
-        <a href="#/createUser">Create user</a>
+        <div class="container">
+          <div class="row">
+            <h3 class="col text-center">Login</h3>
+            <form class="col-12">
+              <div class="col">
+                <label>Username</label>
+                <input type="text" name="usernane" placeholder="Enter username">
+              </div>
+              <div class="col mt-1">
+                <label>Password</label>
+                <input type="text" name="password" placeholder="Enter password">
+              </div>
+              <div class="col mt-1">
+                <input type="submit" name="submit" placeholder="Submit">
+              </div>
+              <div class="col mt-4">
+                <a href="#/createUser" >Create user</a>
+              </div>
+            </form>
+          </div>
+        </div>
       </template>
 
       <!--Create user-->
       <template id="template-createUser">
-        <p>Create user</p>
-        <form>
-          <label>Username</label>
-          <input type="text" name="usernane" placeholder="Enter username">
-          <label>Password</label>
-          <input type="text" name="password" placeholder="Enter password">
-          <input type="submit" name="submit" placeholder="Create">
-        </form>
+        <div class="container">
+          <div class="row">
+            <h3 class="col text-center">Create user</h3>
+            <form class="col-12">
+              <div class="col">
+                <label>Username</label>
+                <input type="text" name="usernane" placeholder="Enter username">
+              </div>
+              <div class="col">
+                <label>Password</label>
+                <input type="text" name="password" placeholder="Enter password">
+              </div>
+              <div class="col">
+                <input type="submit" name="submit" placeholder="Create">
+              </div>
+            </form>
+          </div>
+        </div>
       </template>
 
       <!--Monthly-->
@@ -205,6 +207,25 @@
             <h1 class="col-1 mr-auto ml-auto" id="MonthVariable"></h1>
             <image class="col-1 mr-auto ml-auto"onclick="monthForwardsActivator()" id="MonthForwards" src="RightArrow.png" alt="RightArrow"></image>
           </div>
+
+          <div class="row justify-content-center align-items-center text-center">
+            <div class="backgroundColor">
+                <form id="monthlyBudgetForm" class="row mt-3" method="post">
+                  <div class="col-12">
+                    <label for="monthly_budget">Current budget:</label>
+                    <input id="monthlyMoney" class="col-4" name="monthly_budget" type="text">
+                    <label for="monthly_budget">,-</label>
+                    <button id="submit" type="submit">Submit</button>
+                  </div>
+                </form>
+              </div>
+          </div>
+          <script>
+            document.forms["monthlyBudgetForm"].addEventListener("submit", (event) => {
+                event.preventDefault()
+                monthlybudget.upload();
+              });
+          </script>
           
           <div id='monthContent'>
             <!--Ugerne kommer i denne div-->
