Skal bare lægge links til i monthly page til weekly page

--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
           </div>
         </div>
     </template>
+    <!--Weekly Box-->
+    <template id="weeklyBox">
+      <div>
+        
+      </div>
+    </template>
     </main>
     
     <footer class="position-absolute container-fluid text-center pt-2">
