--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="/JavaScript/app.js" defer></script>
     <script type="text/javascript" src="/JavaScript/MonthlyScript.js" defer></script>
     <script type="text/javascript" src="/JavaScript/MonthlyBudget.js" defer></script>
+    <script type="text/javascript" src="/JavaScript/login.js" defer></script>
 
 </head>
 <body>
@@ -156,14 +157,14 @@
         <div class="container">
           <div class="row">
             <h3 class="col text-center">Login</h3>
-            <form class="col-12">
+            <form id="loginForm" class="col-12">
               <div class="col">
                 <label>Username</label>
-                <input type="text" name="usernane" placeholder="Enter username">
+                <input type="text" id="username" name="usernane" placeholder="Enter username">
               </div>
               <div class="col mt-1">
                 <label>Password</label>
-                <input type="text" name="password" placeholder="Enter password">
+                <input type="text" id="password" name="password" placeholder="Enter password">
               </div>
               <div class="col mt-1">
                 <input type="submit" name="submit" placeholder="Submit">
@@ -172,6 +173,12 @@
                 <a href="#/createUser" >Create user</a>
               </div>
             </form>
+            <script>
+              document.forms["loginForm"].addEventListener("submit", (event) => {
+                event.preventDefault()
+                sessionTool.loginsubmit();
+              });
+            </script>
           </div>
         </div>
       </template>
@@ -181,19 +188,25 @@
         <div class="container">
           <div class="row">
             <h3 class="col text-center">Create user</h3>
-            <form class="col-12">
+            <form id="createUserForm" method="post" class="col-12">
               <div class="col">
                 <label>Username</label>
-                <input type="text" name="usernane" placeholder="Enter username">
+                <input type="text" id="username" name="username" placeholder="Enter username">
               </div>
               <div class="col">
                 <label>Password</label>
-                <input type="text" name="password" placeholder="Enter password">
+                <input type="text" id="password" name="password" placeholder="Enter password">
               </div>
               <div class="col">
                 <input type="submit" name="submit" placeholder="Create">
               </div>
             </form>
+            <script>
+              document.forms["createUserForm"].addEventListener("submit", (event) => {
+                event.preventDefault()
+                sessionTool.createUser();
+              });
+            </script>
           </div>
         </div>
       </template>
