update index, app, login

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     </header>
 
     <main class="mt-5 position-relative">
+        <!-- VIEW -->
+        <!-- Template get's under this div-->
         <div id="view"></div>
 
         <!--Homepage template-->
@@ -193,11 +195,11 @@
                 <label>Username</label>
                 <input type="text" id="username" name="username" placeholder="Enter username">
               </div>
-              <div class="col">
+              <div class="col mt-1">
                 <label>Password</label>
                 <input type="text" id="password" name="password" placeholder="Enter password">
               </div>
-              <div class="col">
+              <div class="col mt-1">
                 <input type="submit" name="submit" placeholder="Create">
               </div>
             </form>
