--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="/JavaScript/app.js" defer></script>
     <script type="text/javascript" src="/JavaScript/MonthlyScript.js" defer></script>
     <script type="text/javascript" src="/JavaScript/MonthlyBudget.js" defer></script>
+    <script type="text/javascript" src="/JavaScript/MonthlyFetch.js" defer></script>
 
 </head>
 <body>
