--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="/JavaScript/MonthlyBudget.js" defer></script>
     <script type="text/javascript" src="/JavaScript/MonthlyFetch.js" defer></script>
     <script type="text/javascript" src="/JavaScript/login.js" defer></script>
+    <script type="text/javascript" src="/JavaScript/dailyBudget.js"></script>
 
 </head>
 <body>
@@ -100,43 +101,8 @@
 
           <!--Shows weekdays-->
           <section class="container mt-5">
-              <div class="row justify-content-center align-items-center text-center">
-                <div class="col-12">
-                  <div class="row">
-                    <div class="col backgroundColor mt-1">
-                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
-                      <p class="col-12">Monday</p>
-                    </div>
-                    <div class="col offset-md-1 backgroundColor mt-1">
-                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
-                      <p class="col-12">Tuesday</p>
-                    </div>
-                    <div class="col offset-md-1 backgroundColor mt-1">
-                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
-                      <p class="col-12">Wendsday</p>
-                    </div>
-                  </div>
-                  <div class="row mt-3">
-                    <div class="col backgroundColor mt-1">
-                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
-                      <p class="col-12">Thursday</p>
-                    </div>
-                    <div class="col offset-md-1 backgroundColor mt-1">
-                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
-                      <p class="col-12">Friday</p>
-                    </div>
-                    <div class="col offset-md-1 backgroundColor mt-1">
-                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
-                      <p class="col-12">Saturday</p>
-                    </div>
-                  </div>
-                  <div class="row mt-3">
-                    <div class="col-6 offset-md-3 backgroundColor mt-1">
-                      <i class="fa-solid fa-calendar-plus col-12 bottomBorder mt-4 pb-2"></i>
-                      <p class="col-12">Sunday</p>
-                    </div>
-                  </div>
-                </div>
+              <div id="weekDays" class="row justify-content-center align-items-center text-center">
+
               </div>
           </section>
       </template>
