--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                   document.forms["monthlyBudgetFormCreate"].addEventListener("submit", (event) => {
                       event.preventDefault()
                       monthlybudget.upload();
+                      window.location.reload()
                     });
                 </script>
               </div>
